# DeepSeek_calling-

./: app.py  datos_negocio_simulado.xlsx  pyproject.toml  readme.md
core/: DeepSeekAgent.py
core/utils/: generator_schema.py
example1/: app.py
example1/schemas/: schema_excel.py
example1/tools/: extract_information_excel.py
src/deepseek_agent/: __init__.py  agent.py
src/deepseek_agent/config/: Config.py
src/deepseek_agent/utils/schema/: __init__.py  generator.py  parameter_config.py  validator.py
