[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-agent"
version = "0.1.0"
description = "Python client for DeepSeek AI with function calling capabilities"
readme = "README.md"
authors = [
    {name = "CarlosMaroRuiz", email = "car06ma15@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "pandas>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/CarlosMaroRuiz/DeepSeek_calling-"
"Bug Tracker" = "https://github.com/CarlosMaroRuiz/DeepSeek_calling-/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]